One more API: Today's Book and SQL optimization
